Fix background on mobile

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ html{
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
 
     color: #ececec;
@@ -143,7 +146,6 @@ nav a:hover, .project-container div:hover{
 
 @media only screen and (orientation: portrait){
     html{
-        background-image: none;
         font-size: 4vw;
     }
 
@@ -173,7 +175,7 @@ nav a:hover, .project-container div:hover{
 
     .project-container div{
         max-width: 100%;
-        font-size: 3.5vw;
+        font-size: 3vw;
     }
 
     #about-list h2{
